# azure_container_app

./: .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  entrypoint.sh  example.env  example_job_config.json  export-config.example.json  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yaml  platform_management.yaml
.github/workflows/matchers/: codespell.json  end-of-file-fixer.json  hadolint.json
docs/: ad_resource_group_creator_role.json
func_app/: function_app.py
functions/: .funcignore  README.md  function_app.py  requirements.txt
pipeline_app/: Dockerfile  build_args.sh  entrypoint.sh  runtime-config.example.json  stats-config.example.json
script/: create_cicd_sp.sh  devops.sh  devops_build_deploy_pipeline_app.sh  devops_create_testfile.sh  devops_provision.sh  devops_provision_func_app.sh  devops_provision_shared.sh  generate_app_service_number.sh  render_role_template.sh
