[project]
name = "azure_container_app"
version = "2025.12.1"
license = { text = "MIT" }
description = "A example project deploying containers"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12.0"
dependencies = []

[tool.project_meta]
short_name = "azcntnrapp"
application_service_number = "APP20251110701bdfaa"
application_owner = "briglx"

[tool.codespell]
count = ''
quiet-level = 3
skip = './.*,*.csv,*.json,*.pyc,./docs/_build/*,./htmlcov/*,*.workbook,*.egg-info,.artifact_cache,*.drawio.svg'
